--- a/findly-builder/src/app/components/add-faq/add-faq.component.scss
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.scss
@@ -384,6 +384,10 @@
                         margin-left: 10px;
                         margin-top: 3px;
                     }
+                    .img{
+                        position: relative;
+                        left: 340px;
+                    }
                     .know-more-data{
                         color: #0D6EFD;
                         font-weight: normal;
