--- a/findly-builder/src/app/components/field-management/field-management.component.html
+++ b/findly-builder/src/app/components/field-management/field-management.component.html
@@ -160,7 +160,7 @@
                     <perfect-scrollbar class="table_body_content">
                         <!-- <div class="table_body row m-0" *ngFor="let field of filelds;let i=index"> -->
                             <div class="table_body row m-0" *ngFor="let field of filelds | fieldsFilter: [ searchFields, 'fieldName'];let i=index">
-                            <div class="col-2 title">{{field.fieldName}}</div>
+                            <div class="col-2 title" [title]="field.fieldName">{{field.fieldName}}</div>
                             <div class="col-2 title">{{field.fieldDataType | translate}}</div>
                             <div class="col-2 title">{{field.isMultiValued?'Yes':'No'}}</div>
                             <div class="col-2 title">{{field.isRequired?'Yes':'No'}}</div>
