--- a/findly-builder/src/app/components/field-management/field-management.component.scss
+++ b/findly-builder/src/app/components/field-management/field-management.component.scss
@@ -111,7 +111,7 @@
                     font-size: 12px;
                     line-height: 14px;
                     text-transform: uppercase;
-                    color: #9AA0A6;
+                    color: #9AA0A6;                   
                 }
                 .col_{
                     font-weight: 500;                       
@@ -162,6 +162,9 @@
                         color: #202124;   
                         cursor: default;
                         word-break: break-word;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
                         img{
                             cursor: pointer;
                         } 
