pageUrl to page_url & sys_content_type in result template

--- a/findly-builder/src/app/components/search-interface/search-interface.component.html
+++ b/findly-builder/src/app/components/search-interface/search-interface.component.html
@@ -78,7 +78,7 @@
             </label>
             <div class="kr-sg-dropdowns">        
               <div class="dropdown dropdown-open">
-                  <button class="dropdown-toggle dropdown-input" [disabled] = "true" data-toggle="dropdown">{{selectedSettingResultsObj.resultClassification.sourceType}}</button>                                            
+                  <button class="dropdown-toggle dropdown-input" [disabled] = "true" data-toggle="dropdown">sys_content_type</button><!-- {{selectedSettingResultsObj.resultClassification.sourceType}}-->                                 
                   <ul class="dropdown-menu content-menu">                                                   
                     <li><a>Option 1</a></li>
                     <li><a>Option 2</a></li>
