--- a/findly-builder/src/app/components/summary/summary.component.html
+++ b/findly-builder/src/app/components/summary/summary.component.html
@@ -74,6 +74,12 @@
           <ng-container *ngIf="!loading_skelton">
             <div class="title">{{'overview.resultRate' | translate}} <span>({{'overview.last_24hrs' | translate}})</span></div>
             <div class="count-graph-data">
+              <!-- <div class="count-sec">
+                <div class="count">{{totalSearchesStats?.searchesWithResults }} <span class="ctr-data">| {{'overview.Result_rate' | translate}}: <b>{{totalSearchesStats?.resultRate!=null?totalSearchesStats?.resultRate:0}}%</b></span></div>
+                <div class="cont-up-down" *ngIf="![0,null].includes(totalSearchesStats.resultRate)">
+                  <span class="bg-type fail"><img [src]="totalSearchesStats?.increasedResultRate<0?'assets/icons/arrow-decrease.svg':'assets/icons/overview/arrow-increase.svg'"></span>{{totalSearchesStats?.increasedResultRate}}%
+                </div>
+              </div>   -->
               <div class="count-sec">
                 <div class="count">{{totalSearchesStats?.resultRate!=null?totalSearchesStats?.resultRate:0 }}%</div>
                 <div class="cont-up-down" *ngIf="![0,null].includes(totalSearchesStats.resultRate)">
