--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -606,7 +606,7 @@
                           <div class="kr-sg-dropdowns">
                             <div class="dropdown dropdown-open">
                               <button class="dropdown-toggle dropdown-input"
-                                data-toggle="dropdown" disabled>{{allow.condition}}</button>
+                                data-toggle="dropdown" disabled>{{allow.condition|titlecase}}</button>
                               
                             </div>
                           </div>
@@ -657,7 +657,7 @@
                       <div class="kr-sg-dropdowns">
                         <div class="dropdown dropdown-open">
                           <button class="dropdown-toggle dropdown-input"
-                            data-toggle="dropdown" disabled>{{allow.condition}}</button>
+                            data-toggle="dropdown" disabled>{{allow.condition|titlecase}}</button>
                           
                         </div>
                       </div>
