--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -495,12 +495,12 @@
                     *ngIf="crwalObject && crwalObject.advanceOpts && crwalObject.advanceOpts.allowedURLs.length && crwalObject.advanceOpts.allowedOpt"
                     class="w-100">
                     <div class="allow-urls-sec row allow-urlBox padd pl-0 pr-0" *ngFor="let rec of crwalObject.advanceOpts.allowedURLs;let i = index">
-                      <!-- <div class="col-1 p-0 title"></div> -->
+                      <div class="col-1 p-0 title"></div>
                         <div class="col-11 p-0 d-flex align-items-center">
                           <div class="kr-sg-dropdowns">
                             <div class="dropdown dropdown-open">
                               <button class="dropdown-toggle dropdown-input"
-                                data-toggle="dropdown" disabled>{{rec.condition}}</button>
+                                data-toggle="dropdown" disabled>{{rec.condition | titlecase}}</button>
 
                             </div>
                           </div>
@@ -554,12 +554,12 @@
                       </div> -->
                     <!-- </span> -->
                     <div class="allow-urls-sec row allow-urlBox padd pl-0 pr-0" *ngFor="let rec of crwalObject.advanceOpts.blockedURLs;let i = index">
-                      <!-- <div class="col-1 p-0 title"></div> -->
+                      <div class="col-1 p-0 title"></div>
                         <div class="col-11 p-0 d-flex align-items-center">
                           <div class="kr-sg-dropdowns">
                             <div class="dropdown dropdown-open">
                               <button class="dropdown-toggle dropdown-input"
-                                data-toggle="dropdown" disabled>{{rec.condition}}</button>
+                                data-toggle="dropdown" disabled>{{rec.condition | titlecase}}</button>
 
                             </div>
                           </div>
