--- a/findly-builder/src/app/components/dashboard/dashboard.component.html
+++ b/findly-builder/src/app/components/dashboard/dashboard.component.html
@@ -68,7 +68,7 @@
                 <div class="col cards-data">
                     <div class="content">
                         <div class="title-info">{{'metrics.dash_board_view.result_rate'| translate}}
-                            <img src="assets/icons/gray_info.svg" placement="top-center" ngbTooltip="Total number of searches performed during the selected period" [container]="'body'" tooltipClass="dashboard-custom-tooltips" class="pl-1"></div>
+                            <img src="assets/icons/gray_info.svg" placement="top-center" ngbTooltip="Total number of searches that returned at least one result" [container]="'body'" tooltipClass="dashboard-custom-tooltips" class="pl-1"></div>
                         <div class="bottom-sec">
                             <div class="left-sec">
                                 <div class="count">{{totalSearchesStats.resultRate }}%</div>
