Fix for FLY-2806

--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -816,7 +816,7 @@
     </div>
       <div class="close_icon">
           <span [ngClass]="{'d-none': showSearch}" (mouseover)="isHoverd = true;"
-          (mouseout)="isHoverd = false;" (click)="showSearch=!showSearch;focusinSearch('fieldSearchId')" class="search-mr" id="btn_toggle_search_structured_data" ><img src="{{isHoverd?'assets/icons/search_gray_bg.png':'assets/icons/search_white_bg.png'}}" class="search-icon" [ngClass]="{'d-none': showSearch,'search-icon-hovered':!isHoverd}"></span>
+          (mouseout)="isHoverd = false;" (click)="showSearch=!showSearch;focusinSearch('fieldSearchId')" class="search-mr" id="btn_toggle_search_structured_data" ><img src="{{isHoverd?'assets/icons/search_gray_bg.svg':'assets/icons/search_white_bg.svg'}}" class="search-icon" [ngClass]="{'d-none': showSearch,'search-icon-hovered':!isHoverd}"></span>
         <img src="assets/images/close.svg" (click)="closeSimulator()" />
       </div>
     </div>
