--- a/findly-builder/src/app/components/add-structured-data/add-structured-data.component.html
+++ b/findly-builder/src/app/components/add-structured-data/add-structured-data.component.html
@@ -16,7 +16,7 @@
                     </div>
                     <div class="kr-sg-input-text-area mb-0 mt-3">
                         <div class="kr-sg-file-drag-drop">
-                            <div class="drag-drop-sec">
+                            <div class="drag-drop-sec" [class.err-block]="(!selectedSourceType.resourceAdded && submitted)">
                                 <input type="file" id="sourceFileUploader_add_structured_data" class="custom-file-input " (change)="fileChangeJsonListener($event)" aria-describedby="inputGroupFileAddon01" accept=".csv,.json">
                                 <ng-container *ngIf="!fileObj.fileName">
                                     <div class="imageDiv mb-3">
@@ -72,7 +72,7 @@
                             <div class="indent" placement="top-center" container='body' ngbTooltip="Indent" tooltipClass="ngb_tooltip_custom_class sampleJson" id="btn_indent_add_structured_data" (click)="indentObj()"><img src="assets/icons/content/indent.svg"></div>                        
                         </div>
                         <div class="editor">
-                            <div class="left-sec">
+                            <div class="left-sec" [class.err-block]="(!selectedSourceType.resourceAdded && submitted)" [class.err-block]="isInvalidJSON">
                                 <ngx-codemirror #codemirror name="jsonEditor" [options]="codeMirrorOptions" (dblclick)="doubleClick($event)" [(ngModel)]="structuredData.payload" (ngModelChange)="setEditorContent($event)" id="ngx_codemirror_add_structured_data"></ngx-codemirror>
                             </div>                                                     
                             <div class="sample-json" *ngIf="!selectedJsonForEdit">                              
@@ -142,7 +142,7 @@
         </perfect-scrollbar>
         <div class="modal-footer">
             <button class="kr-sg-button-primary btn_lg mr-3" *ngIf="selectedSourceType && selectedSourceType.viewMode" (click)="editRecord()" id="btn_edit_structure_data">{{ 'structuredData.edit' | translate}}</button>
-            <button class="kr-sg-button-primary btn_lg mr-3" *ngIf="!selectedSourceType || (selectedSourceType && !selectedSourceType.viewMode)" [disabled]="sourceCreation.invalid || !selectedSourceType.resourceAdded" (click)="proceedSource()" id="btn_save_structure_data">{{ selectedJsonForEdit ? ('structuredData.save' | translate) : ('structuredData.proceed' | translate)}}</button>
+            <button class="kr-sg-button-primary btn_lg mr-3" *ngIf="!selectedSourceType || (selectedSourceType && !selectedSourceType.viewMode)" (click)="proceedSource()" id="btn_save_structure_data">{{ selectedJsonForEdit ? ('structuredData.save' | translate) : ('structuredData.proceed' | translate)}}</button> <!-- [disabled]="sourceCreation.invalid || !selectedSourceType.resourceAdded" -->
             <button class="kr-sg-button-secondary backbtn btn_md mr-2" (click)="cancleSourceAddition({cancel : true})" id="btn_cancel_structure_data">{{ (selectedJsonForEdit && selectedSourceType.viewMode) ? ('structuredData.close' | translate) : ('structuredData.cancel' | translate)}}</button>
             <button class="kr-sg-button-danger float-left btn_lg mr-3" *ngIf="selectedJsonForEdit && selectedSourceType.viewMode" (click)="deleteStructuredDataPopup(selectedJsonForEdit)" id="btn_delete_structure_data">{{ 'structuredData.delete' | translate}}</button> <!-- Removed Disabled [disabled]="selectedSourceType && !selectedSourceType.viewMode"-->
         </div>
