--- a/findly-builder/src/app/components/add-structured-data/add-structured-data.component.scss
+++ b/findly-builder/src/app/components/add-structured-data/add-structured-data.component.scss
@@ -39,12 +39,16 @@
                     }
                 }
             }
-            .kr-sg-file-drag-drop{                
+            .kr-sg-file-drag-drop{
                 &.w-100{
                     position: relative;
                     z-index: 99;
                 }               
                 .drag-drop-sec{
+                    &.err-block{
+                        background-color: rgb(255, 255, 255);
+                        border-color: rgb(221, 54, 70);
+                    }
                     background: #FFFFFF;
                     border: 1px dashed #BDC1C6;
                     box-sizing: border-box;
@@ -102,6 +106,10 @@
                     width: 100%;
                     height: calc(100vh - 215px);
                     .left-sec{
+                        &.err-block{
+                            background-color: rgb(255, 255, 255);
+                            border-color: rgb(221, 54, 70);
+                        }
                         background: #FFFFFF;
                         border: 1px dashed #BDC1C6;
                         box-sizing: border-box;
