credentials code updated

--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.scss
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.scss
@@ -238,8 +238,29 @@
     }    
 }
 ::ng-deep .add-credentials-popup{
-    .modal-dialog{             
-        .modal-content{      
+    &.add-credebtials{
+        .modal-dialog{          
+            width: 810px;
+            height: 523px;
+            max-height: 523px;  
+            .modal-content{      
+                border-radius: 8px !important;
+                .modal-header{
+                    span{
+                        color: #202124;
+                        font-weight: 500;
+                        font-size: 18px;
+                        line-height: 22px;  
+                    }
+                }
+            }
+        }
+    }
+    .modal-dialog{          
+        background: #FFFFFF;
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+        border-radius: 8px;             
+        .modal-content{               
             .nav-tabs{
                 border: 0;
                 margin: 0;
