--- a/findly-builder/src/app/components/search-experience/search-experience.component.scss
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.scss
@@ -541,20 +541,20 @@
                     display: inline-block;
                     .box-color-content{
                         position: absolute;
-                        left: 50px;
+                        left: 62px;
                         background: #FFFFFF;
                         box-shadow: 0px 0px 4px rgb(0 0 0 / 25%);
                         border-radius: 8px;
                         width: 542px;
                         height: 360px;
-                        top: -75px;
+                        top: -55px;
                         padding: 5px 5px 10px 10px;
                         &::before{
                             content: "";
                             position: absolute;
                             background: #FFFFFF;
                             box-shadow: -3px 0px 4px rgb(0 0 0 / 10%);
-                            top: 78px;
+                            top: 58px;
                             left: -12px;
                             width: 24px;
                             height: 24px;
@@ -707,6 +707,8 @@
                                         padding: 0;
                                         border: 0;
                                         padding-left: 25px;
+                                        background: transparent;
+                                        box-shadow: none;
                                         .emojis-images-block{
                                             background: #FFFFFF;
                                             box-shadow: 0px 0px 4px rgb(0 0 0 / 25%);
