--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.html
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.html
@@ -42,13 +42,19 @@
     </div>
     <perfect-scrollbar class="scroll-table" >
         <div class="table-data" *ngIf="(channnelConguired && channnelConguired.length) ">
-            <div class="table-header row m-0" >
+            <div class="table-header row m-0 d-none" >
                 <div class="col-2 title">{{"credentials.credential_name" | translate}}</div>
                 <div class="col-3 title">CHANNELS</div>                
-                <div class="col-3 title">API SCOPES</div>
+                <div class="col-3 title d-none">API SCOPES</div>
                 <div class="col-3 title">{{"credentials.last_updated" | translate}}<img src="assets/icons/dropdown_gray.svg" class="ml-1"></div>
             </div>
-            <div class="table-body-content row m-0 align-items-center d-none" *ngFor="let data of channnelConguired | filter :[searchcredential, 'appName']" >
+            <div class="table-header row m-0" >
+                <div class="col-3 title">{{"credentials.credential_name" | translate}}</div>
+                <div class="col-3 title">CREDENTIAL USSAGE</div>                
+                <div class="col-3 title ">LAST UPDATED</div>
+                <div class="col-3 title">{{"credentials.last_updated" | translate}}<img src="assets/icons/dropdown_gray.svg" class="ml-1"></div>
+            </div>
+            <div class="table-body-content row m-0 align-items-center" *ngFor="let data of channnelConguired | filter :[searchcredential, 'appName']" >
                 <!-- (click)="viewDetails()" -->
                 <div class="col-3 title">{{data.appName}}</div>
                 <div class="col-3 title">{{data.appUsage}}</div>
@@ -63,7 +69,7 @@
             </div>
 
 
-            <div class="table-body-content row m-0 align-items-center">                
+            <div class="table-body-content row m-0 align-items-center d-none">                
                 <div class="col-2 title">Banking Bot</div>
                 <div class="col-3 title">--</div>
                 <div class="col-3 title api-scope-data">
@@ -118,7 +124,7 @@
             <span> {{"credentials.add_credential" | translate}}</span>
             <div class="close_icon" (click)="closeModalPopup()"><img src="assets/icons/modal-close.svg"></div>
         </div>
-        <ul class="nav nav-tabs" role="tablist">
+        <ul class="nav nav-tabs d-none" role="tablist">
             <li class="nav-item">
               <a class="nav-link active" data-toggle="tab" href="#configuration">Configuration</a>
             </li>
@@ -134,7 +140,7 @@
                             <div class="label-text">{{"credentials.credential_name" | translate}}</div>            
                             <input type="text" maxlength="60" autocomplete="off" name="credname" placeholder="Enter Name" [(ngModel)]="credntial.name"  id="addSourceTitleInput" (change)="inputChanged('title')" class="input-text"> 
                         </div>
-                        <div class="group-checkbox mb-4">    
+                        <div class="group-checkbox mb-4 d-none">    
                             <div class="kr-sg-checkbox d-block">
                                 <input id="checkbox_1" class="checkbox-custom" type="checkbox" [(ngModel)]="credntial.anonymus">
                                 <label for="checkbox_1" class="checkbox-custom-label">{{"credentials.allow_anonymous_users_to_chat_with_the_bot" | translate}}</label>
@@ -156,13 +162,13 @@
                             </div>
                         </div>
             
-                        <div class="switch-toggle">                
+                        <div class="switch-toggle d-none">                
                             <label class="kr-sg-toggle">
                                 <input type="checkbox" [(ngModel)]="credntial.enabled">
                                 <div class="slider"><span class="enabled">{{"credentials.push_notifications_enabled" | translate}}</span><span class="disabled">{{"credentials.push_notifications_enabled" | translate}}</span></div>
                             </label>
                         </div>     
-                        <div class="client-input-box-container">
+                        <div class="client-input-box-container d-none">
                             <div class="data-sec mb-4">
                                 <div class="label-text">Client ID</div>
                                 <div class="input-box-content d-flex align-items-center">
