--- a/findly-builder/src/app/components/search-insights/search-insights.component.scss
+++ b/findly-builder/src/app/components/search-insights/search-insights.component.scss
@@ -43,7 +43,7 @@
             box-sizing: border-box;
             border-radius: 8px;
             padding: 3px 4px;
-            margin-right: 16px;
+            // margin-right: 16px;
             .time {
                 background: #fff;
                 border-radius: 4px;
