--- a/findly-builder/src/app/components/summary/summary.component.scss
+++ b/findly-builder/src/app/components/summary/summary.component.scss
@@ -97,6 +97,9 @@
                                     font-weight: 600;
                                 }
                             }
+                            .d-inline-block{
+                                max-width: 80px;
+                            }
                         }
                         .cont-up-down{
                             display: flex;
